# LocalMoney

./: .gitignore  ANCHOR_DOCUMENTATION_ANALYSIS.md  AXELAR_INTEGRATION_PLAN.md  BSC_DEPLOYMENT_INSTRUCTIONS.md  CLAUDE.md  CONVERSION_PLAN.md  COSMWASM_TO_EVM_TRANSLATION_GUIDE.md  FIX_00_IMPLEMENTATION_ROADMAP.md  FIX_01_ENUM_CONSISTENCY.md  FIX_02_ARITHMETIC_SAFETY.md  FIX_03_ACCOUNT_VALIDATION.md  FIX_04_CPI_VALIDATION.md  FIX_05_RENT_EXEMPTION.md  FIX_06_CIRCUIT_BREAKER.md  FIX_07_VECTOR_BOUNDS.md  FIX_08_EVENT_EMISSION.md  FIX_09_ARBITRATOR_VRF.md  FIX_10_PRICE_ORACLE.md  FRONTEND_FIXES.md  INITIAL.md  LOCALMONEY_PROTOCOL_SPEC.md  LOCAL_MONEY_IMPROVEMENT_PLAN.md  LocalMoney_Trade_Program_PR_Comments_Analysis.md  PHASE2_REFACTOR_COMPLETE.md  PR_Comments_Task_List.md  SOLANA_E2E_TESTING.md  SOLANA_FEATURE_ANALYSIS.md  SOLANA_PROTOCOL_MIGRATION.md  SOLANA_TEST_ANALYSIS.md  SQUADS_PROTOCOL_ANALYSIS.md  TODO_Completion_Summary.md  code-review-report-2025-08-31-feat-bsc-42785.md  next_prompt.md  package-lock.json  package.json  summary.md  test.md
.claude/: settings.json
contracts/cosmwasm/: Cargo.toml  PROTOCOL_SPEC.md  all.sh  justfile
contracts/cosmwasm/contracts/: diff.txt
contracts/cosmwasm/contracts/hub/: Cargo.toml
contracts/cosmwasm/contracts/offer/: Cargo.toml
contracts/cosmwasm/contracts/price/: Cargo.toml
contracts/cosmwasm/contracts/profile/: Cargo.toml
contracts/cosmwasm/contracts/trade/: Cargo.toml
contracts/cosmwasm/scripts/: check_artifacts_size.sh
contracts/cosmwasm/scripts/deployment/: deploy_localmoney.sh  deploy_pool.js  deploy_pool.sh  wallet_importer.sh
contracts/cosmwasm/scripts/emergency/: README.md  close_farms.js  close_farms.sh  toggle_pool_features.js  toggle_pool_features.sh
contracts/cosmwasm/scripts/hooks/: commit-msg.sh  pre-commit.sh
contracts/programs/: Cargo.toml
contracts/programs/hub/: Cargo.toml
contracts/programs/hub/src/: lib.rs
contracts/programs/offer/: Cargo.toml
contracts/programs/offer/src/: lib.rs
contracts/programs/price/: Cargo.toml
contracts/programs/price/src/: lib.rs
contracts/programs/profile/: Cargo.toml
contracts/programs/profile/src/: lib.rs
contracts/programs/shared/src/: price.rs
contracts/programs/trade/: Cargo.toml
contracts/programs/trade/src/: lib.rs
contracts/solana/: .gitignore  .program_hash_cache  Anchor.toml  BUILD_ERRORS.md  CONVERSION_PLAN.md  Cargo.toml  E2E_FIX_DETAILED_PLAN.md  E2E_TEST_PROGRESS_SUMMARY.md  INTEGRATION_TEST_FIXES.md  README.md  SECURITY_IMPROVEMENTS.md  ai_agent_testing_prompt.md  package.json  run-tests.sh  summary.md  test-log.txt  test_analysis_report.md  test_implementation_roadmap.md  translation.md  tsconfig.json  update-program-ids.ts
contracts/solana/.cursor/rules/: development-workflow.mdc  localnet-deployment.mdc  solana.mdc  testing-guidelines.mdc
contracts/solana/.github/workflows/: ci.yml
contracts/solana/.keypairs/: admin.json  arbitrator.json  maker.json  taker.json
contracts/solana/benches/: performance.rs
contracts/solana/common/: Cargo.toml
contracts/solana/common/src/: lib.rs
contracts/solana/localmoney-protocol/: .gitignore  Anchor.toml  Cargo.toml
contracts/solana/localmoney-protocol/tests/: arbitration-integration.test.ts  basic-cpi-test.ts  complete-flow-demo.test.ts  comprehensive-cross-program-integration.test.ts  comprehensive-price-integration.test.ts  cross-program-calls.ts  cross-program-interactions-comprehensive.test.ts  dispute-resolution-integration.test.ts  end-to-end-workflows.test.ts  error-handling-edge-cases.test.ts  fee-distribution-comprehensive.test.ts  fee-distribution-integration.test.ts  hub.test.ts  integration-test-framework-demo.test.ts  localmoney-protocol.ts  offer-management-integration.test.ts  offer-profile-integration.test.ts  price-integration-unit.test.ts  price-trading-integration.test.ts  price.test.ts  profile.test.ts  protocol-validation.test.ts  simple-cross-program-test.ts  trade-execution-integration-simple.test.ts  trade-execution-integration.test.ts  trade-profile-integration.test.ts  working-flow-demo.test.ts
contracts/solana/programs/hub/: Cargo.toml
contracts/solana/programs/offer/: Cargo.toml
contracts/solana/programs/price/: Cargo.toml
contracts/solana/programs/profile/: Cargo.toml
contracts/solana/programs/shared/: Cargo.toml
contracts/solana/programs/trade/: Cargo.toml
contracts/solana/scripts/: setup-test-env.ts  start-localnet.sh
contracts/solana/sdk/: .solitarc.js  CLEANUP_REPORT_AUG2025.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  SDK_OVERHAUL_COMPLETE.md  TEST_RESULTS.md  comprehensive-test.js  debug-account-order.js  debug-offer-pda.js  debug-offer.js  debug-pda.js  debug-profile-pda.js  debug-program-id.js  debug-reverse-pda.js  debug-trade.js  jest.config.js  minimal-test.js  package.json  pnpm-lock.yaml  run-e2e-test.sh  run-integration-tests.sh  test-complete-trade-flow.js  test-direct-offer.js  test-offer-complete.js  test-offer-direct.js  test-offer-final.js  test-offer-fix-simple.js  test-offer-fix.js  test-offer-only.js  test-offer-simple.js  test-simple-offer.js  test-trade-flow-sdk.js  tsconfig.json  update-types.js
contracts/solana/sdk/scripts/: fix-instructions.ts  generate-sdk.ts
contracts/solana/sdk/src/: index.ts  types.ts  utils.ts
contracts/solana/shared-types/: Cargo.toml
contracts/solana/tests/: address-test.ts  advanced_features.rs  anchor-approach.ts  anchor-basic-lifecycle.ts  anchor-integration.ts  anchor-minimal.ts  arbitration-simple.ts  arbitration-validation.ts  arbitration.ts  basic.js  circuit_breaker.ts  config.ts  connection-test.ts  hub.test.ts  hub.ts  hub_minimal.ts  init-hub.js  initialize-hub-simple.js  initialize-hub-simple.ts  initialize-hub.ts  initialize-localmoney-lifecycle.ts  integration.js  localmoney-solana.js  localmoney.ts  offer.test.ts  offer.ts  offer_profile.test.ts  package.json  price.ts  price_oracle.ts  profile-test.ts  profile.ts  property_tests.rs  setupTests.ts  simple-verify.ts  simple.test.ts  simplified-approach.ts  step-by-step.ts  trade.test.ts  trade.ts  (+2 more)
(+541 files in other folders)
