[workspace]
members = [
    "hub",
    "profile",
    "price",
    "trade",
    "offer",
]

[workspace.dependencies]
solana-program = "1.18.26"
borsh = "0.10.3"
thiserror = "1.0.56"
borsh-derive = "0.10.3"
num-derive = "0.4"
num-traits = "0.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
