[workspace]
members = [
  "programs/hub",
  "programs/offer",
  "programs/trade",
  "programs/price",
  "programs/profile",
  "programs/shared",
]
resolver = "2"

# Force cargo to use older lockfile version
[workspace.metadata]
version-control = { lockfile-version = "3" }

[profile.release]
overflow-checks = true
lto = false
codegen-units = 16

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 16 