[package]
name = "localmoney-hub"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
borsh-derive = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"] 