[package]
name = "localmoney-price"
version = "0.1.0"
edition = "2021"
description = "Price oracle program for LocalMoney on Solana"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.17"
borsh = "0.10"
borsh-derive = "0.10"
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"
spl-token = { version = "4.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17" 