[package]
name = "localmoney-shared"
version = "0.1.0"
description = "Shared types for LocalMoney Solana programs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "localmoney_shared"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

[dev-dependencies]
proptest = "1.0"