[package]
name = "hub"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
thiserror.workspace = true
schemars.workspace = true
serde.workspace = true
snafu.workspace = true
cw2.workspace = true
cw20.workspace = true
cw-storage-plus.workspace = true
cw-utils.workspace = true
cw-ownable.workspace = true
cw-migrate-error-derive.workspace = true
semver.workspace = true
localmoney-protocol.workspace = true

[dev-dependencies]
cosmwasm-vm.workspace = true
cw-multi-test.workspace = true
anyhow.workspace = true
