[package]
name = "hub"
version = "0.1.0"
description = "Hub program for LocalMoney protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hub"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1" }
localmoney-shared = { path = "../shared", features = ["cpi"] }

[dev-dependencies]
# Add development specific dependencies here if needed
# e.g., anchor-client = "..." 