[package]
name = "localmoney-hub"
version = "0.1.0"
description = "LocalMoney Hub - Central configuration, admin and registration orchestration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "localmoney_hub"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
