[package]
name = "offer"
version = "0.1.0"
description = "Offer program for LocalMoney protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "offer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1", features = ["token"] }
localmoney-shared = { path = "../shared", features = ["cpi"] }
# solana-program = "1.18.12" 