[package]
name = "localmoney-trade"
version = "0.1.0"
description = "LocalMoney Trade - P2P trade lifecycle, escrow, disputes, and settlements"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "localmoney_trade"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
