[package]
name = "offer"
version = "0.1.0"
description = "LocalMoney Offer Program - Manages buy/sell offers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "offer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
shared-types = { path = "../../packages/shared-types" }
hub = { path = "../hub", features = ["cpi"] }
profile = { path = "../profile", features = ["cpi"] }
