[package]
name = "price"
version = "0.1.0"
description = "LocalMoney Price Program - Price oracle and conversion rates"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "price"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
shared-types = { path = "../../packages/shared-types" }
hub = { path = "../hub", features = ["cpi"] }
