[package]
name = "profile"
version = "0.1.0"
description = "LocalMoney Profile Program - User profile and reputation management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "profile"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"
shared-types = { path = "../../packages/shared-types" }
hub = { path = "../hub", features = ["cpi"] }
