[package]
name = "offer"
version = "0.0.0"
authors = ["localmoney devs"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []

[dependencies]
cosmwasm-std = "2.2.1"
cosmwasm-storage = { version = "1.0.0" }
thiserror = "1.0.45"
schemars = "0.8.12"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
snafu = "0.7.4"
localmoney-protocol = { path = "../../packages/protocol" }
cw2 = "2.0.0"
cw20 = "2.0.0"
cw20-base = "2.0.0"
cw-storage-plus = { version = "2.0.0" }
rand = "0.7"

[dev-dependencies]
cosmwasm-schema = "2.2.0"
cosmwasm-vm = "2.2.1"
